# Talent_Finder_Backend_Core

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
docs/: API.md  DEPLOYMENT.md
src/: main.py
src/api/middleware/: error_handler.py  logging.py
src/api/rest/: app.py  dependencies.py
src/config/: settings.py
src/control/agents/scoring_agent/: __init__.py  graph.py  launcher.py  llm.py  nodes.py  prepare_states.py  state.py  utils.py
src/core/exception/: exceptions.py
src/core/exceptions/: exceptions.py
src/core/services/: __init__.py  email_service.py
src/core/services/auth/: auth_service.py
src/core/services/job_post/: embeddings.py  job_post_services.py  resume_embedding.py
src/core/services/organization/: organization_service.py
src/core/services/role_permission/: role_permission_service.py
src/core/services/score_run/: score_run_services.py
src/core/services/shortlists/: job_shortlist_services.py
src/core/services/source_run/: source_run_services.py  (+1 more)
src/core/utils/: background_task_manager.py
src/data/clients/: chroma_client.py  mongodb_client.py  pgvector_client.py  postgres_client.py
src/data/migrations/: init.sql  job_post.sql  mongo-init.js  pgvector_migrations.py  sourcing_config.sql
src/schemas/: auth_schema.py  candidate_scores.py  job_post_schema.py  score_run_schema.py  shortlist_schema.py  source_run_schema.py  sourced_candidate.py  sourcing_config_schema.py
src/utils/: email_utils.py  seed_database.py  seed_resume.py
(+28 files in other folders)
